Add font awesome icon, google fonts and game items divs

--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--font awesome and google fonts-->
+    <script src="https://kit.fontawesome.com/18e4246add.js" crossorigin="anonymous"></script>
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <audio id='tennisball.mp3' src="https://www.zapsplat.com/?s=tennis+ball+4&post_type=music&sound-effect-category-id="></audio>
+
     <title>Bat and Ball</title>
 </head>
 <body>
-    
+    <h1>Bat and Ball <i class="fa-solid fa-table-tennis-paddle-ball" alt="table tennis paddle and ball"></i></h1>
+
+    <div id="gameboard"></div>
+    <div id="bat"></div>
+    <div id="ball"></div>
+
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
