Style game items - gameboard, bat and ball

--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
 <body>
     <h1>Bat and Ball <i class="fa-solid fa-table-tennis-paddle-ball" alt="table tennis paddle and ball"></i></h1>
 
-    <div id="gameboard"></div>
+    <div id="gameBoard"></div>
     <div id="bat"></div>
     <div id="ball"></div>
 
+    <footer>
+        <h3>Rules</h3>
+        <p>Control the bat with the mouse while hitting the ball.</p>
+    </footer>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
