Add event listener to check movement of mouse

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <title>Bat and Ball</title>
 </head>
-<body>
+<body onmousemove="moveBat(event)">
     <h1>Bat and Ball <i class="fa-solid fa-table-tennis-paddle-ball" alt="table tennis paddle and ball"></i></h1>
 
     <div id="gameBoard"></div>
