Add functions to move the bat and the ball

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
     <!--font awesome and google fonts-->
     <script src="https://kit.fontawesome.com/18e4246add.js" crossorigin="anonymous"></script>
     
@@ -17,7 +18,7 @@
 <body onmousemove="moveBat(event)">
     <h1>Bat and Ball <i class="fa-solid fa-table-tennis-paddle-ball" alt="table tennis paddle and ball"></i></h1>
 
-    <div id="gameBoard"></div>
+    <div id="board"></div>
     <div id="bat"></div>
     <div id="ball"></div>
 
